Added Theme change functionality and changing quantity of items as per order

--- a/RMS/RMS/StyleSheets/MasterStyleSheet.css
+++ b/RMS/RMS/StyleSheets/MasterStyleSheet.css
@@ -16,6 +16,20 @@
     text-align: left;
 }
 
+.ThemeDropDown{
+    position: absolute;
+    right: 200px;
+    top: 35px;
+    font-family: Calibri;
+}
+
+.LogoutButton {
+    position: absolute;
+    right: 100px;
+    top: 35px;
+    font-family: Calibri;
+}
+
 .menuMaster {
     color: Green;
 }
