--- a/RMS/RMS/RMSMaster.master
+++ b/RMS/RMS/RMSMaster.master
@@ -1,4 +1,4 @@
-﻿<%@ Master Language="C#" AutoEventWireup="True" Inherits="RMSMaster" CodeFile="RMSMaster.master.cs"%>
+﻿<%@ Master Language="C#" AutoEventWireup="True" Inherits="RMSMaster" Codebehind="RMSMaster.master.cs" %>
 
 <!DOCTYPE html>
 
@@ -14,6 +14,8 @@
     <div class="masterDiv">
         <asp:Image ID="Image1" runat="server" ImageUrl="~/images/RMS.png" Height="100px" Width="100px"/>
         <asp:Label ID="Label1" runat="server" Text="Restaurant Management System" Font-Size="XX-Large" CssClass="Header"></asp:Label>
+        <asp:DropDownList ID="theme_ddl" runat="server" AutoPostBack="true" OnSelectedIndexChanged="ChangeTheme" CssClass="ThemeDropDown"></asp:DropDownList>
+        <asp:Button ID="logout_button" runat="server" OnClick="Logout" Text="Logout" CssClass="LogoutButton" />
 
         <br />
         <asp:Menu ID="NavigationMenu" runat="server" CssClass="menuMaster" EnableViewState="false" IncludeStyleBlock="true" Orientation="Horizontal" Font-Size="X-Large" StaticMenuStyle-CssClass="StaticMenuStyle"
