--- a/RMS/RMS/StyleSheets/LoginPageStyleSheet.css
+++ b/RMS/RMS/StyleSheets/LoginPageStyleSheet.css
@@ -4,16 +4,16 @@
     left: 65%;
     height: 200px;
     margin: -100px 0 0 -25%;
+    color: #ff9900;
 
 }
 
 .LoginUserName {
-    background-color: #e5e5e5;
+    color: black;
     border: none;
     border-radius: 3px;
     -moz-border-radius: 3px;
     -webkit-border-radius: 3px;
-    color: #5a5656;
     font-family: 'Open Sans', Arial, Helvetica, sans-serif;
     font-size: 14px;
     height: 50px;
